chore: pre-commit fixes and safety tweaks
- RedisAdapter.get: avoid coercing numeric strings (IDs/state)
- Align logging to app_log_level/app_debug
- Update .env.example (DISCORD_PUBLIC_KEY doc)
- mypy: exclude legacy config duplicate; adjust hook
- Run ruff/format/end-of-file-fixer

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,91 @@
-# Riot API Configuration
-RIOT_API_KEY=RGAPI-your-production-key-here
-RIOT_API_REGION=americas  # americas, europe, asia, sea
+# ==========================================
+# Project Chimera Environment Configuration
+# ==========================================
+# Copy this file to .env and fill in your values
 
-# Discord Configuration
-DISCORD_BOT_TOKEN=your-discord-bot-token-here
-DISCORD_GUILD_ID=your-guild-id-for-testing
+# ==========================================
+# Discord Bot Configuration (REQUIRED)
+# ==========================================
+DISCORD_BOT_TOKEN=your_discord_bot_token_here
+DISCORD_APPLICATION_ID=your_application_id_here
+# Optional: Only needed for HTTP interactions verification; discord.py gateway bots do not require it
+# DISCORD_PUBLIC_KEY=your_discord_public_key_here
 
+# Optional: Set this to your guild ID for faster command sync during development
+# DISCORD_GUILD_ID=your_test_guild_id_here
+
+BOT_PREFIX=!
+
+# ==========================================
+# Riot API Configuration (REQUIRED)
+# ==========================================
+RIOT_API_KEY=your_riot_api_key_here
+
+# ==========================================
 # Database Configuration
-DATABASE_URL=postgresql+asyncpg://user:password@localhost/project_chimera
-REDIS_URL=redis://localhost:6379/0
+# ==========================================
+# PostgreSQL connection string
+DATABASE_URL=postgresql://user:password@localhost:5432/lolbot
+DATABASE_POOL_SIZE=20
+DATABASE_MAX_OVERFLOW=40
+DATABASE_POOL_TIMEOUT=30
 
-# AI/LLM Configuration
-GEMINI_API_KEY=your-gemini-api-key-here
+# ==========================================
+# Redis Configuration
+# ==========================================
+# Redis connection URL for caching and state management
+REDIS_URL=redis://localhost:6379
+REDIS_CACHE_TTL=3600
+REDIS_MATCH_CACHE_TTL=86400
+
+# ==========================================
+# RSO (Riot Sign-On) OAuth Configuration (REQUIRED for /bind)
+# ==========================================
+# Get these from Riot Developer Portal: https://developer.riotgames.com/
+SECURITY_RSO_CLIENT_ID=your_rso_client_id_here
+SECURITY_RSO_CLIENT_SECRET=your_rso_client_secret_here
+
+# Callback URL - must match the one registered in Riot Developer Portal
+# Default: http://localhost:3000/callback
+SECURITY_RSO_REDIRECT_URI=http://localhost:3000/callback
+
+# ==========================================
+# AI Configuration (Optional)
+# ==========================================
+# Google Gemini API for match analysis
+GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-pro
+GEMINI_TEMPERATURE=0.7
+GEMINI_MAX_OUTPUT_TOKENS=2048
 
-# TTS Configuration (Doubao)
-DOUBAO_API_KEY=your-doubao-api-key-here
-DOUBAO_API_URL=https://api.doubao.com/v1/tts
+# ==========================================
+# TTS Configuration (Optional)
+# ==========================================
+# Doubao TTS for voice narration
+TTS_API_KEY=your_tts_api_key_here
+TTS_API_URL=your_tts_endpoint_here
+TTS_VOICE_ID=default
 
-# Application Settings
-ENVIRONMENT=development
-LOG_LEVEL=INFO
-DEBUG=true
+# ==========================================
+# Application Configuration
+# ==========================================
+APP_NAME=Project Chimera
+APP_VERSION=0.1.0
+APP_ENV=development
+APP_DEBUG=false
+APP_LOG_LEVEL=INFO
 
-# Celery Configuration
-CELERY_BROKER_URL=redis://localhost:6379/1
-CELERY_RESULT_BACKEND=redis://localhost:6379/2
+# ==========================================
+# Celery Task Queue (Optional)
+# ==========================================
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/1
+CELERY_TASK_TIME_LIMIT=300
+CELERY_TASK_SOFT_TIME_LIMIT=240
+
+# ==========================================
+# Feature Flags
+# ==========================================
+FEATURE_VOICE_ENABLED=false
+FEATURE_AI_ANALYSIS_ENABLED=true
+FEATURE_LEADERBOARD_ENABLED=true
