--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -174,6 +174,10 @@ services:
     ports:
       - "3000:3000"  # RSO callback server
     volumes:
+      # Source code mounts (development mode - enables hot reload)
+      - ./src:/app/src
+      - ./main.py:/app/main.py
+      # Data and cache directories
       - ./logs:/app/logs
       - ./static:/app/static
       - ./ddragon_cache:/app/ddragon_cache
@@ -275,6 +279,10 @@ services:
       ALERTS_DISCORD_WEBHOOK: ${ALERTS_DISCORD_WEBHOOK}
       ALERT_WEBHOOK_SECRET: ${ALERT_WEBHOOK_SECRET}
     volumes:
+      # Source code mounts (development mode - enables hot reload)
+      - ./src:/app/src
+      - ./main.py:/app/main.py
+      # Data and cache directories
       - ./logs:/app/logs
       - ./.prom_multiproc:/app/.prom_multiproc
       - ./static:/app/static
