fix(ci): update ruff output format from concise to github
- Ruff 0.14.0 removed 'concise' format support
- Use 'github' format for better CI integration
- Resolves: error: invalid value 'concise' for '--output-format'

--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Ruff Lint
         run: |
-          poetry run ruff check --output-format=concise
+          poetry run ruff check --output-format=github
 
       - name: MyPy Strict (src only)
         run: |
